:children_crossing: improve api & options
